Added deployment to project definition.